--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,10 @@
+- name: Test connectivity for enrollment to {{ wazuh_agent_wazuh_manager }}
+  ansible.builtin.wait_for:
+    host: "{{ wazuh_agent_wazuh_manager }}"
+    port: "{{ wazuh_agent_enrollment_port }}"
+    timeout: 5
+    state: started
+
 - name: Set wazuh agent name
   ansible.builtin.set_fact:
     wazuh_agent_hostname: "{{ ansible_hostname }}"
